--- a/unm-mobileweb-app/src/main/webapp/univ-intg/profil.html
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/profil.html
@@ -72,7 +72,7 @@
           </ul>
       </nav>
       <div class="main-wrap">
-          <header class="main-navbar container clearfix">
+          <header class="main-navbar clearfix">
                       <button type="button" class="navbar-menu-toggle">
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
