--- a/unm-mobileweb-app/src/main/webapp/univ-intg/splash.html
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/splash.html
@@ -47,7 +47,9 @@
                                   <option>Universite3</option>
                               </select>
                           </div>
-                          <button type="submit" class="btn confirm center-block">Valider</button>
+                          <div class="button-wrap">
+                              <button type="submit" class="btn confirm center-block">Ok</button>
+                          </div>
                       </form>
                   </div>
                   <div class="splash-logos-wrap">
