--- a/unm-mobileweb-app/src/main/webapp/univ-intg/geo1_1.html
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/geo1_1.html
@@ -198,10 +198,10 @@
                       </div>
                   </div>
                   <div class="category-wrap">
-                       <div class="list-wrap">
-                           <div class="category-nav-button top row">
-                               <button class="col-xs-3 btn show-hide-search show-search"><i class="icon text-hide"></i></button>
-                               <button class="col-xs-9 btn show-hide-category hide-category">Trier par categories<i class="icon"></i></button>
+                      <div class="list-wrap">
+                          <div class="category-nav-button top row">
+                              <button class="col-xs-9 btn show-hide-category hide-category"><i class="icon"></i>Trier par categories</button>
+                              <button class="col-xs-3 btn show-hide-search show-search"><i class="icon text-hide"></i></button>
                            </div>
                            <ul class="category-list row">
                                <li class="list-item">                                
