--- a/unm-mobileweb-app/src/main/webapp/univ-intg/home.html
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/home.html
@@ -72,7 +72,7 @@
           </ul>
       </nav>
       <div class="main-wrap">
-          <header class="main-navbar clearfix">
+          <header class="main-navbar container clearfix">
                       <button type="button" class="navbar-menu-toggle">
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
@@ -134,7 +134,7 @@
                           <li class="list-item">
                               <article>                                
                                   <div class="row">
-                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" class="collapsed">
                                           <div class="img-wrap">
                                               <img class="img-responsive" alt="article" src="./img/article-2.jpg">
                                           </div>
@@ -156,7 +156,7 @@
                           <li class="list-item">
                               <article>                                
                                   <div class="row">
-                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="collapsed">
                                           <div class="img-wrap">
                                               <img class="img-responsive" alt="article" src="./img/article-3.jpg">
                                           </div>
@@ -175,10 +175,22 @@
                                   </div>
                               </article>
                           </li>
-
                       </ul>
                   </div>
-
+                  <div class="link-wrap more">
+                      <a class="link" href="#">Voir toutes les Actualités</a>
+                  </div>
+                  <div class="list-title">Géo’Campus</div>
+                  <div class="map">
+                      <a href="geo1.html"><img src="./img/static-map.jpg" alt="main article" class="img-responsive"></a>
+                  </div>
+                  <div class="bottom-buttons">
+                      <div class="category-buttons row">
+                          <a href="geo1.html" class="active category-link one col-xs-4"><i class="icon"></i></a>
+                          <a href="geo2.html" class="category-link two col-xs-4"><i class="icon"></i></a>
+                          <a href="geo3.html" class="category-link three col-xs-4"><i class="icon"></i></a>
+                      </div>
+                  </div>
               </div>
           </div>
       </div>
