--- a/unm-mobileweb-app/src/main/webapp/univ-intg/universitaire.html
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/universitaire.html
@@ -72,7 +72,7 @@
           </ul>
       </nav>
       <div class="main-wrap">
-          <header class="main-navbar clearfix">
+          <header class="main-navbar container clearfix">
                       <button type="button" class="navbar-menu-toggle">
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
@@ -101,7 +101,7 @@
                           <li class="list-item">
                               <article>                                
                                   <div class="row">
-                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
                                               <div class="img-wrap">
                                                   <img class="img-responsive" alt="article" src="./img/article-1.jpg">
                                               </div>
@@ -124,7 +124,7 @@
                           <li class="list-item">
                               <article>                                
                                   <div class="row">
-                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" class="collapsed">
                                           <div class="img-wrap">
                                               <img class="img-responsive" alt="article" src="./img/article-2.jpg">
                                           </div>
@@ -146,7 +146,7 @@
                           <li class="list-item">
                               <article>                                
                                   <div class="row">
-                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="collapsed">
                                           <div class="img-wrap">
                                               <img class="img-responsive" alt="article" src="./img/article-3.jpg">
                                           </div>
