--- a/unm-mobileweb-app/src/main/webapp/univ-intg/login.html
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/login.html
@@ -99,7 +99,7 @@
                       <div class="form-title">Connexion</div>
                       <form id="login-form">
                           <div class="form-group">
-                              <label for="exampleInputEmail1">Adresse Email</label>
+                              <label for="exampleInputEmail1">Nom d'utilisateur</label>
                               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="">
                           </div>
                           <div class="form-group">
